[tool.poetry]
name = "discordpy-bot-template-with-commands-extension"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.3.4"
Flask = "^2.2.2"
pyfiglet = "^0.8.post1"
praw = "^7.6.0"
translate = "^3.6.1"
utils = "^1.0.1"
colorama = "^0.4.6"
termcolor = "^2.1.0"
replit = "^3.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
